--- a/css/animate.css
+++ b/css/animate.css
@@ -1,5 +1,61 @@
 @charset "UTF-8";
 
+
+swiper-container {
+  width: 300px;
+  height: 200px;
+}
+
+swiper-slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  font-size: 22px;
+  font-weight: bold;
+  color: #fff;
+}
+
+swiper-slide:nth-child(1n) {
+  background-color: rgb(0, 0, 0);
+}
+
+swiper-slide:nth-child(2n) {
+  background-color: rgb(0, 0, 0);
+}
+
+swiper-slide:nth-child(3n) {
+  background-color: rgb(0, 0, 0);
+}
+
+swiper-slide:nth-child(4n) {
+  background-color: rgb(0, 0, 0);
+}
+
+swiper-slide:nth-child(5n) {
+  background-color: rgb(0, 0, 0);
+}
+
+swiper-slide:nth-child(6n) {
+  background-color: rgb(0, 0, 0);
+}
+
+swiper-slide:nth-child(7n) {
+  background-color: rgb(0, 0, 0);
+}
+
+swiper-slide:nth-child(8n) {
+  background-color: rgb(0, 0, 0);
+}
+
+swiper-slide:nth-child(9n) {
+  background-color: rgb(218, 12, 218);
+}
+
+swiper-slide:nth-child(10n) {
+  background-color: rgb(54, 94, 77);
+}
+
 /*!
 Animate.css - http://daneden.me/animate
 Licensed under the MIT license - http://opensource.org/licenses/MIT
