--- a/css/layout.css
+++ b/css/layout.css
@@ -16,7 +16,7 @@ swiper-slide {
 }
 
 swiper-slide:nth-child(1n) {
-  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.363);
 }
 
 swiper-slide:nth-child(2n) {
